--- a/examples/todomvc/package.json
+++ b/examples/todomvc/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
+    "lodash": "^4.17.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "todomvc-app-css": "^2.0.6"
