Improved code coverage

--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
   "jest": {
     "transform": {
       ".*": "<rootDir>/node_modules/babel-jest"
-    }
+    },
+    "testPathIgnorePatterns": [
+      "example"
+    ]
   }
 }
