--- a/examples/todomvc-async/package.json
+++ b/examples/todomvc-async/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "todomvc-reactionpack",
+  "name": "todomvc-async-reactionpack",
   "version": "1.0.0",
   "description": "",
   "author": "Tim Santeford <tsantef@gmail.com>",
-  "homepage": "https://tsantef.github.io/reactionpack/examples/todomvc",
+  "homepage": "https://tsantef.github.io/reactionpack/examples/todomvc-async",
   "license": "MIT",
   "private": true,
   "scripts": {
@@ -11,8 +11,8 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "test": "react-scripts test",
-    "deploy:clean": "rm -rf ../../docs/examples/todomvc",
-    "deploy:mv": "mv build ../../docs/examples/todomvc",
+    "deploy:clean": "rm -rf ../../docs/examples/todomvc-async",
+    "deploy:mv": "mv build ../../docs/examples/todomvc-async",
     "deploy": "npm run build && npm run deploy:clean && npm run deploy:mv"
   },
   "dependencies": {
