--- a/package.json
+++ b/package.json
@@ -29,23 +29,26 @@
   "dependencies": {
     "lodash": "^4.17.4"
   },
+  "peerDependencies": {
+    "react": ">= 0.13.0 <16.0.0"
+  },
   "devDependencies": {
     "babel-cli": "^6.23.0",
     "babel-jest": "^18.0.0",
     "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.22.0",
-    "eslint": "^3.15.0",
+    "eslint": "^3.16.1",
     "eslint-config-appnexus": "^1.6.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-lodash": "^2.3.5",
-    "eslint-plugin-promise": "^3.4.1",
-    "eslint-plugin-react": "^6.9.0",
+    "eslint-plugin-promise": "^3.4.2",
+    "eslint-plugin-react": "^6.10.0",
     "jest": "^18.1.0",
     "pre-push": "^0.1.1",
     "react": "^15.4.2",
     "react-test-renderer": "^15.4.2",
-    "rimraf": "^2.5.4"
+    "rimraf": "^2.6.1"
   },
   "jest": {
     "transform": {
