--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "clean": "rimraf lib coverage",
     "build": "BABEL_ENV=commonjs babel src --out-dir lib --ignore \"**/*.spec.js\"",
     "test": "jest",
-    "watch": "jest --watch --versbose",
+    "watch": "jest --watch --verbose",
     "cover": "jest --coverage",
     "lint": "eslint src --quiet",
     "lint-fix": "eslint src --fix",
@@ -34,7 +34,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
-    "babel-jest": "^18.0.0",
+    "babel-jest": "^19.0.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.22.0",
@@ -44,7 +44,7 @@
     "eslint-plugin-lodash": "^2.3.5",
     "eslint-plugin-promise": "^3.4.2",
     "eslint-plugin-react": "^6.10.0",
-    "jest": "^18.1.0",
+    "jest": "^19.0.2",
     "pre-push": "^0.1.1",
     "react": "^15.4.2",
     "react-test-renderer": "^15.4.2",
