--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.22.0",
+    "coveralls": "^2.11.16",
     "eslint": "^3.16.1",
     "eslint-config-appnexus": "^1.6.0",
     "eslint-plugin-import": "^2.2.0",
