--- a/examples/todomvc/package.json
+++ b/examples/todomvc/package.json
@@ -20,6 +20,7 @@
     "lodash": "^4.17.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "reactionpack": ">0.3.0",
     "todomvc-app-css": "^2.0.6"
   },
   "devDependencies": {
